# docs/swagger.json
@@ -29,12 +29,12 @@
                 "summary": "登入",
                 "parameters": [
                     {
-                        "description": "Body",
-                        "name": "Login",
+                        "description": "使用者登入資訊",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/pojo.Account"
                         }
                     }
                 ],
@@ -96,6 +96,19 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "pojo.Account": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
